--- a/src/index.css
+++ b/src/index.css
@@ -98,6 +98,7 @@ h3 {
 .carousel a {
   margin: 0 auto;
 }
+/* product */
 .productCard {
   margin: 20px 0;
   border-radius: 6px;
@@ -106,20 +107,25 @@ h3 {
   height: 270px;
 }
 @media (max-width: 700px) {
+  h3 {
+    padding: 0;
+  }
   .carousel img {
     height: 280px;
   }
   .carousel-caption h2 {
-    font-size: x-small;
+    font-size: small;
   }
   .productCard {
-    height: 220px;
+    height: 230px;
+    padding-bottom: 10px;
   }
   .productCardImg {
     height: 100px;
   }
+
   .cardText {
-    font-size: 8px;
+    font-size: 12px;
     display: inline-block;
   }
 }
