--- a/src/index.css
+++ b/src/index.css
@@ -37,12 +37,14 @@ h3 {
 .categoryHeader .link {
   height: 100%;
   width: 100%;
+  color: #fff;
   display: flex;
   justify-content: center;
   align-items: center;
 }
+
 .categoryHeader:hover {
-  color: #000;
+  color: #fff;
   outline: 1px solid #0009;
   outline-offset: 3px;
 }
@@ -116,16 +118,17 @@ h3 {
   .carousel-caption h2 {
     font-size: small;
   }
+
   .productCard {
-    height: 230px;
+    height: 320px;
     padding-bottom: 10px;
   }
   .productCardImg {
-    height: 100px;
+    height: 180px;
   }
 
   .cardText {
-    font-size: 12px;
+    font-size: 16px;
     display: inline-block;
   }
 }
